--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./icontinysocial.png" />
+    <link rel="icon" href="./NovareaLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -26,7 +26,7 @@
       rel="stylesheet"
     />
 
-    <title>Tiny Social</title>
+    <title>Novarea | Connect your passion</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
