Update Category va CRUD Post

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
     />
 
-    <title>Novarea | Connect your passion</title>
+    <title>Gamemortal | Connect your passion</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
